infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: astarion
  name: astarion-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "http://jwt.astarion.svc.cluster.local:8082/"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ~* /internal {
          return 404;
      }
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /member/(.*)
        pathType: Prefix
        backend:
          service:
            name: member
            port:
              number: 8081
